# AstraWeave-AI-Native-Gaming-Engine

./: $null  .editor_preferences.json  .gitattributes  .gitignore  .markdownlint.json  404.html  ACTION_14_IMPLEMENTATION_PLAN.md  ACTION_27_COLLISION_OPTIMIZATION_COMPLETE.md  AGENTS.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_README.md  ASTRAWEAVE_SECURITY_FIX_SUMMARY.md  ASTRAWEAVE_STRESS_TEST_FIX_SUMMARY.md  BASELINE_METRICS.md  BENCHMARK_DASHBOARD_FINAL_STATUS.md  BENCHMARK_DASHBOARD_FIX.md  BENCHMARK_DISCOVERY_REPORT.md  BENCHMARK_FIX_COMPLETION_REPORT.md  BENCHMARK_RECONCILIATION_REPORT.md  BIND_GROUP_CONSOLIDATION_COMPLETE.md  CAMERA_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CI_BENCHMARK_PIPELINE.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS_SUMMARY.md  COMPETITIVE_MATRIX.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_REPOSITORY_ANALYSIS.md  COMPREHENSIVE_STRATEGIC_ANALYSIS.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS_UPDATE_SUMMARY.md  COVERAGE_REPORT_GUIDE.md  Cargo-workspace.toml  Cargo.toml  DOCUMENTATION_AUDIT_TRACKING.csv  DOCUMENTATION_UPDATE_SPRINT_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  EDITOR_DEEP_AUDIT_REPORT.md  EDITOR_TEST_REPORT.md  ENHANCED_3D_BIOME_INTEGRATION.md  (+500 more)
astraweave-ai/: Cargo.toml  README.md
astraweave-ai/benches/: ai_benchmarks.rs  ai_core_loop.rs  arbiter_bench.rs  goap_bench.rs  goap_performance_bench.rs  goap_vs_rule_bench.rs  integration_pipeline.rs  multi_agent_pipeline.rs
astraweave-ai/src/: ai_arbiter.rs  async_task.rs  core_loop.rs  ecs_ai_plugin.rs  lib.rs  llm_executor.rs  mutation_tests.rs  orchestrator.rs  tool_sandbox.rs  veilweaver.rs
astraweave-ai/tests/: AI_NATIVE_TESTS_README.md  ai_arbiter_implementation_tests.rs  arbiter_comprehensive_tests.rs  arbiter_tests.rs  async_task_comprehensive_tests.rs  behavioral_correctness_tests.rs  core_loop_goap_integration.rs  core_loop_policy_switch.rs  core_loop_rule_integration.rs  cross_module_integration.rs  determinism_tests.rs  ecs_integration_tests.rs  edge_case_tests.rs  goap_hierarchical_planning.rs  goap_learning_integration.rs  goap_vs_rule_comparison.rs  integration_tests.rs  llm_fallback.rs  memory_management_test.rs  mutation_resistant_comprehensive_tests.rs  nan_infinity_tests.rs  orchestrator_additional_tests.rs  orchestrator_extended_tests.rs  orchestrator_tool_tests.rs  perception_tests.rs  plan_snapshot.rs  planner_tests.rs  rag_integration_test.rs  stress_tests.rs  tool_sandbox.rs  tool_validation_tests.rs
astraweave-asset/: Cargo.toml
astraweave-asset-pipeline/: Cargo.toml
astraweave-asset-pipeline/benches/: pipeline_adversarial.rs
astraweave-asset-pipeline/src/: lib.rs  mesh.rs  texture.rs  validator.rs
astraweave-asset-pipeline/tests/: mutation_resistant_comprehensive_tests.rs
astraweave-asset/benches/: asset_adversarial.rs
astraweave-asset/fuzz/: Cargo.toml
astraweave-asset/src/: cell_loader.rs  lib.rs  mutation_tests.rs  nanite_preprocess.rs
astraweave-asset/tests/: behavioral_correctness_tests.rs  gltf_loading_tests.rs  mesh_validation_tests.rs  mutation_resistant_comprehensive_tests.rs  texture_loading_tests.rs
astraweave-behavior/: Cargo.toml
astraweave-behavior/benches/: behavior_tree.rs  goap_planning.rs
astraweave-behavior/src/: ecs.rs  goap.rs  goap_cache.rs  interner.rs  lib.rs  mutation_tests.rs
astraweave-behavior/tests/: behavior.rs  fuzz_planner.rs  mutation_resistant_comprehensive_tests.rs  mutation_resistant_tests.rs
astraweave-cinematics/: Cargo.toml
astraweave-cinematics/benches/: cinematics_benchmarks.rs
astraweave-cinematics/src/: lib.rs  mutation_tests.rs
astraweave-cinematics/tests/: mutation_resistant_comprehensive_tests.rs
astraweave-context/: Cargo.toml
astraweave-context/benches/: context_benchmarks.rs
astraweave-context/src/: history.rs  lib.rs  summarizer.rs  token_counter.rs  window.rs
astraweave-context/tests/: advanced_context_test.rs  context_window_tests.rs  conversation_history_tests.rs  history_tests.rs  missing_context_tests.rs  mutation_resistant_comprehensive_tests.rs  window_tests.rs
astraweave-coordination/: Cargo.toml
astraweave-coordination/benches/: coordination_adversarial.rs
astraweave-coordination/src/: agent.rs  coordination.rs  lib.rs  narrative_coherence.rs  world_events.rs
astraweave-coordination/tests/: mutation_resistant_comprehensive_tests.rs
astraweave-core/: Cargo.toml  README.md  test_capture_content.json  test_capture_overwrite.json  test_many_obstacles.json  test_replay_load.json  test_replay_zero.json  test_roundtrip_entities.json
astraweave-core/benches/: core_benchmarks.rs  full_game_loop.rs
astraweave-core/src/: capture_replay.rs  ecs_adapter.rs  ecs_bridge.rs  ecs_components.rs  ecs_events.rs  lib.rs  metrics.rs  mutation_tests.rs  perception.rs  schema.rs  schema_kani.rs  sim.rs  tool_sandbox.rs  tool_vocabulary.rs  tools.rs  util.rs  validation.rs  world.rs
astraweave-core/tests/: behavioral_correctness_tests.rs  cross_crate_stability_tests.rs  ecs_integration_tests.rs  full_system_determinism.rs  mutation_resistant_comprehensive_tests.rs  perception_tests.rs  performance_integration.rs  schema_tests.rs  simulation.rs  tools_tests.rs
astraweave-dialogue/: Cargo.toml
astraweave-dialogue/benches/: dialogue_bench.rs
astraweave-director/: Cargo.toml
astraweave-ecs/: Cargo.toml  README.md
astraweave-embeddings/: Cargo.toml
astraweave-fluids/: Cargo.toml  README.md  check_results.txt  errors.txt  test_results.txt  test_results_final.txt
astraweave-ipc/: Cargo.toml
astraweave-llm/: Cargo.toml  README.md
astraweave-llm-eval/: Cargo.toml
astraweave-materials/: Cargo.toml
astraweave-math/: Cargo.toml  README.md
astraweave-memory/: Cargo.toml
astraweave-nav/: Cargo.toml  README.md
astraweave-net/: Cargo.toml
astraweave-net-ecs/: Cargo.toml
astraweave-observability/: Cargo.toml
astraweave-optimization/: Cargo.toml
astraweave-pcg/: Cargo.toml  README.md
astraweave-persistence-ecs/: Cargo.toml
astraweave-persona/: Cargo.toml
astraweave-physics/: Cargo.toml  README.md
astraweave-profiling/: Cargo.toml
(+12686 files in other folders)
