[workspace]
members = [
  "astraweave-ecs",
  "astraweave-ai",
  "astraweave-sdk",
  "astraweave-director",
  "astraweave-memory",
  "astraweave-ipc",
  "astraweave-llm",       
  "astraweave-llm-eval",
  "astraweave-persona",   
  "astraweave-author",
  # Phase 1 LLM Integration Foundation Crates
  "astraweave-embeddings",
  "astraweave-context",
  "astraweave-prompts",
  "astraweave-rag",
  "astraweave-net",       
  "examples/hello_companion",
  "examples/adaptive_boss",
  "examples/companion_profile",
  "examples/ipc_loopback",
  "examples/debug_overlay",
  "examples/llm_toolcall",    
  "examples/llm_integration",    
  "examples/llm_comprehensive_demo",
  "examples/llm_streaming_demo",
  "examples/ollama_probe",
  "examples/phase_director",  
  "examples/persona_loader",  
  "examples/rhai_authoring",  
  "examples/coop_server",     
  "examples/coop_client",    
  "astraweave-render",
  "astraweave-materials",
  "astraweave-asset",
  "astraweave-asset-pipeline",
  "examples/visual_3d",
  "astraweave-physics",
  "astraweave-nav",
  "astraweave-scene",
  "astraweave-terrain",
  "astraweave-math",
  "examples/physics_demo3d",
  "examples/navmesh_demo",
  "astraweave-gameplay",
  "examples/weaving_playground",
  "examples/crafting_combat_demo",
  "examples/quest_dialogue_demo",
  "examples/combat_physics_demo",
  "examples/cutscene_render_demo",
  "astraweave-audio",
  "examples/audio_spatial_demo",
  "examples/dialogue_voice_demo",
  "examples/dialogue_audio_cli",
  "examples/nav_physics_bridge",
  "astraweave-npc",
  "examples/npc_town_demo",
  "astraweave-input",
  "astraweave-ui",
  "astraweave-cinematics",
  "examples/skinning_demo",
  "examples/ui_controls_demo",
  "examples/debug_toolkit_demo",
  "examples/save_integration",
  "examples/unified_showcase",
  "examples/cinematics_timeline_demo",
  "examples/terrain_demo",
  "examples/biome_showcase",
  "examples/orchestrator_async_tick",
  # New tooling crates
  "tools/aw_editor",
  "tools/aw_asset_cli",
  "tools/astraweave-assets",  # Autonomous PolyHaven asset fetcher
  "astraweave-dialogue",
  "astraweave-quests",
  "astraweave-behavior",
  "astraweave-pcg",
  "astraweave-weaving",
  "tools/aw_debug",
  "tools/aw_build",
  "tools/aw_texture_gen",
  "tools/aw_headless",
  "tools/ollama_probe",
  "tools/asset_signing",
  "tools/aw_release",
  "tools/aw_demo_builder",
  # persistence
  "persistence/aw-save",
  "tools/aw_save_cli",
  # Enhanced networking layer
  "net/aw-net-proto",
  "net/aw-net-server",
  "net/aw-net-client",
  "astraweave-net-ecs",
  "astraweave-persistence-ecs",
  "crates/astraweave-persistence-player",
  "astraweave-stress-test",
  "astraweave-security",
  "astraweave-observability",
  "astraweave-profiling",
  "examples/ecs_ai_demo",
  "examples/ecs_ai_showcase",
  # Phase 3 demos
  "examples/core_loop_bt_demo",
  "examples/core_loop_goap_demo",
  "examples/weaving_pcg_demo",
  # Week 4 demos
  "examples/phi3_demo",
  "examples/veilweaver_demo",
  "examples/world_partition_demo",
  "examples/profiling_demo",
  # Phase 8 demos
  "examples/ui_menu_demo",
]
exclude = [
  "astraweave-ecs/fuzz",  # Fuzz targets must be built separately
]
resolver = "2"

# Exclude crates with known compilation issues from workspace operations
[workspace.metadata.ci-excludes]
# These crates had compilation issues that have now been fixed:
# - All previously problematic crates now compile successfully
# - Only some crates still have warnings but no compilation errors
problematic = [
  # All crates now work! Keeping this section for documentation purposes.
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.89.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
zip = "6.0"
rand = "0.9"
rand_chacha = "0.9"
approx = "0.5"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
semver = "1.0"
rhai = { version = "1.23", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tungstenite = "0.28"
tokio-tungstenite = "0.28"
egui = "0.33"
eframe = { version = "0.33", default-features = true, features = ["wgpu"] }
egui_dock = "0.18"
egui_graphs = "0.29"
egui_plot = "0.34"
petgraph = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["serde"] }
wgpu = "27.0.1"
winit = { version = "0.30", features = ["serde"] }
pollster = "0.4"
rapier3d = "0.30"
bitflags = "2.10"
rodio = "0.21"
egui-winit = "0.33"
egui-wgpu = "0.33"
gilrs = "0.11"
tracing = "0.1"
criterion = "0.7"
tempfile = "3"
astraweave-ecs = { path = "astraweave-ecs" }
astraweave-core = { path = "astraweave-core" }
astraweave-ai = { path = "astraweave-ai" }
astraweave-behavior = { path = "astraweave-behavior" }
astraweave-memory = { path = "astraweave-memory" }
astraweave-nav = { path = "astraweave-nav" }
astraweave-llm = { path = "astraweave-llm" }
astraweave-physics = { path = "astraweave-physics" }
astraweave-math = { path = "astraweave-math" }
astraweave-render = { path = "astraweave-render" }
astraweave-net-ecs = { path = "astraweave-net-ecs" }
astraweave-persistence-ecs = { path = "astraweave-persistence-ecs" }
astraweave-stress-test = { path = "astraweave-stress-test" }
astraweave-security = { path = "astraweave-security" }
astraweave-observability = { path = "astraweave-observability" }
astraweave-profiling = { path = "astraweave-profiling" }

