[package]
name = "astraweave-ai"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-core = { workspace = true }
astraweave-ecs = { workspace = true }
astraweave-nav = { workspace = true }
rapier3d = { workspace = true }
glam = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, optional = true }

[features]
default = []
# Enabling llm_orchestrator will also enable the Ollama client in astraweave-llm and a tokio runtime for background warmup
llm_orchestrator = ["astraweave-llm", "astraweave-llm/ollama", "dep:tokio"]

[dependencies.astraweave-llm]
workspace = true
optional = true

[dev-dependencies]
futures = "0.3"
