[package]
name = "astraweave-ai"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-core = { workspace = true }
astraweave-ecs = { workspace = true }
astraweave-nav = { workspace = true }
rapier3d = { workspace = true }
glam = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
tracing = { workspace = true }
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
tracy-client = { version = "0.17", optional = true }

[features]
default = []
# Enabling llm_orchestrator will also enable the Ollama client in astraweave-llm and a tokio runtime for background warmup
llm_orchestrator = ["astraweave-llm", "astraweave-llm/ollama", "dep:tokio", "dep:futures"]
ai-goap = []
ai-bt = []
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]

[dependencies.astraweave-llm]
workspace = true
optional = true

[dev-dependencies]
futures = "0.3"
futures-executor = "0.3"
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }

[[bench]]
name = "ai_core_loop"
harness = false

[[bench]]
name = "goap_bench"
harness = false

[[bench]]
name = "arbiter_bench"
harness = false
