[package]
name = "astraweave-ai"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-core = { workspace = true }
astraweave-ecs = { workspace = true }
astraweave-nav = { workspace = true }
astraweave-behavior = { workspace = true, optional = true }
astraweave-observability = { workspace = true, optional = true }
rapier3d = { workspace = true }
glam = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
tracy-client = { version = "0.18", optional = true }
bincode = "2.0"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }

[features]
default = []
# Enabling llm_orchestrator will also enable the Ollama client in astraweave-llm and a tokio runtime for background warmup
llm_orchestrator = ["astraweave-llm", "astraweave-llm/ollama", "dep:tokio", "dep:futures"]
ai-goap = []
ai-bt = []
# Advanced GOAP planner with learning, risk-awareness, and multi-goal support
planner_advanced = []
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]
veilweaver_slice = ["dep:astraweave-behavior", "dep:astraweave-observability"]

[dependencies.astraweave-llm]
workspace = true
optional = true

[dev-dependencies]
futures = "0.3"
futures-executor = "0.3"
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tempfile = "3.8"

[[bench]]
name = "ai_core_loop"
harness = false

[[bench]]
name = "goap_bench"
harness = false

[[bench]]
name = "arbiter_bench"
harness = false

[[bench]]
name = "ai_benchmarks"
harness = false

[[bench]]
name = "integration_pipeline"
harness = false
