[package]
name = "astraweave-behavior"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
astraweave-ecs.workspace = true
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
tracy-client = { version = "0.18", optional = true }

[features]
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "goap_planning"
harness = false

[[bench]]
name = "behavior_tree"
harness = false
