[package]
name = "astraweave-cinematics"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "cinematics_benchmarks"
harness = false
