[package]
name = "astraweave-coordination"
version = "0.1.0"
license.workspace = true
edition = "2021"

[[bench]]
name = "coordination_adversarial"
harness = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-llm = { path = "../astraweave-llm" }
astraweave-rag = { path = "../astraweave-rag" }
astraweave-context = { path = "../astraweave-context" }
astraweave-prompts = { path = "../astraweave-prompts" }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
petgraph = "0.8"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }