[package]
name = "astraweave-core"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }

# Allow cfg(kani) for Kani formal verification
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }
astraweave-ecs = { workspace = true }
astraweave-behavior = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
astraweave-ai = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "full_game_loop"
harness = false
