[package]
name = "astraweave-director"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-core = { path = "../astraweave-core" }
astraweave-llm = { path = "../astraweave-llm" }
astraweave-rag = { path = "../astraweave-rag" }
astraweave-context = { path = "../astraweave-context" }
astraweave-prompts = { path = "../astraweave-prompts" }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
