[package]
name = "astraweave-ecs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
tracy-client = { version = "0.18", optional = true }

[features]
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
