[package]
name = "astraweave-ecs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
astraweave-profiling = { path = "../astraweave-profiling", optional = true }
tracy-client = { version = "0.18", optional = true }

[features]
profiling = ["astraweave-profiling/profiling", "tracy-client", "tracy-client/enable"]

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
criterion = { workspace = true }
proptest = "1.9"
test-strategy = "0.4"
loom = "0.7"  # Concurrency model checker for Phase 4.4

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "ecs_benchmarks"
harness = false
