[package]
name = "astraweave-embeddings"
version = "0.1.0"
edition = "2021"
description = "High-performance embeddings and vector search for AI-native gaming"
license = "MIT"
repository = "https://github.com/lazyxeon/AstraWeave-AI-Native-Gaming-Engine"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Vector operations and indexing
nalgebra = "0.32"
rand = "0.8"

# ONNX Runtime for sentence transformers
ort = { version = "2.0", features = ["cuda", "tensorrt"], optional = true }

# Alternative: candle for pure Rust inference
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

# HNSW for approximate nearest neighbor search
hnsw_rs = "0.3"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

[features]
default = ["candle"]
onnx = ["ort"]
candle = ["candle-core", "candle-nn", "candle-transformers"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "embedding_benchmark"
harness = false