[package]
name = "astraweave-embeddings"
version = "0.1.0"
edition = "2021"
description = "High-performance embeddings and vector search for AI-native gaming"
license = "MIT"
repository = "https://github.com/lazyxeon/AstraWeave-AI-Native-Gaming-Engine"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }

# Vector operations and indexing
nalgebra = "0.34"
rand = { version = "0.9", features = ["small_rng"] }

# ONNX Runtime for sentence transformers
ort = { version = "2.0.0-rc.11", features = ["cuda", "tensorrt"], optional = true }

# Alternative: candle for pure Rust inference
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }

# HNSW for approximate nearest neighbor search (optional)
hnsw_rs = { version = "0.3", optional = true }

# HTTP client for embeddings API
reqwest = { version = "0.12", features = ["json"], optional = true }

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

[features]
default = ["hnsw"]
hnsw = ["hnsw_rs"]
http = ["reqwest"]
onnx = ["ort"]
candle = ["candle-core", "candle-nn", "candle-transformers"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "embeddings_bench"
harness = false

