[package]
name = "astraweave-fluids"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "fluids_adversarial"
harness = false

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = "2.0"

[dev-dependencies]
winit = { workspace = true }
pollster = { workspace = true }
env_logger = "0.11"
criterion = { version = "0.7", features = ["html_reports"] }

