[package]
name = "astraweave-fluids"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]
parallel = ["dep:rayon"]

[[bench]]
name = "fluids_adversarial"
harness = false

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
bitflags = { version = "2.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0" }
bincode = "1.3"
thiserror = "1.0"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
winit = { workspace = true }
pollster = { workspace = true }
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

