[package]
name = "astraweave-materials"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
naga = { version = "25.0.1", features = ["wgsl-in"] }
