[package]
name = "astraweave-materials"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bench]]
name = "materials_adversarial"
harness = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }
criterion = { version = "0.7", features = ["html_reports"] }
