[package]
name = "astraweave-memory"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-llm = { path = "../astraweave-llm" }
astraweave-embeddings = { path = "../astraweave-embeddings" }
astraweave-rag = { path = "../astraweave-rag" }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
async-trait = "0.1"
lru = "0.16"
rusqlite = { version = "0.37", features = ["bundled"] }
bevy_ecs = { version = "0.17", optional = true }

[features]
default = []
bevy = ["bevy_ecs"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "memory_benchmarks"
harness = false