[package]
name = "astraweave-nav"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "navmesh_benchmarks"
harness = false
