[package]
name = "astraweave-net-ecs"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = "0.28"
aw-net-proto = { path = "../net/aw-net-proto" }
astraweave-ecs = { workspace = true }
astraweave-core = { workspace = true }
postcard = "1.0"
lz4_flex = "0.12"
crc32fast = "1.4"
glam = { workspace = true }
bincode = "2.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "net_ecs_benchmarks"
harness = false

[[bench]]
name = "net_ecs_adversarial"
harness = false