[package]
name = "astraweave-net"
version = "0.1.0"
license.workspace = true
edition = "2021"

[features]
default = []
tls = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
astraweave-core = { path = "../astraweave-core" }
rand = { workspace = true }

# TLS support (optional) - using ring for Windows compatibility
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
