[package]
name = "astraweave-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio.workspace = true
astraweave-ecs.workspace = true
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
async-trait = "0.1"
prometheus = { version = "0.14", optional = true }
opentelemetry = { version = "0.23", optional = true }
opentelemetry-jaeger = { version = "0.22", optional = true }
histogram = "0.6"
hdrhistogram = "7.5"
rand = "0.8"

[features]
default = []
prometheus = ["dep:prometheus"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry-jaeger"]

[dev-dependencies]
tempfile.workspace = true