[package]
name = "astraweave-optimization"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
astraweave-llm = { path = "../astraweave-llm" }
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
async-trait = "0.1"
lru = "0.12"
tokio-util = "0.7"