[package]
name = "astraweave-pcg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural content generation with seed reproducibility for AstraWeave"

[features]
default = []
pcg = []

[dependencies]
# Random number generation
rand = { workspace = true }

# Math
glam = { workspace = true }

# Serialization
serde = { workspace = true }

# Collections
# Using std BTreeMap/BTreeSet for deterministic iteration

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "pcg_benchmarks"
harness = false
