[package]
name = "astraweave-persistence-ecs"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
crc32fast = "1.4"
lz4_flex = "0.11"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aw-save = { path = "../persistence/aw-save" }
astraweave-ecs = { workspace = true }
astraweave-core = { workspace = true }
astraweave-memory = { workspace = true }

[dev-dependencies]
tempfile = "3"